# CatFacts

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
javascript/: package-lock.json  package.json
javascript/backend/nodejs/: index.mjs  package-lock.json  package.json
javascript/components/: CatFacts.js  Container.js
javascript/frontend/components/: Cat.js  CatFacts.js  Pygame.js
javascript/frontend/public/: index.js
javascript/frontend/utils/: index.js
javascript/public/: index.html  startCat.avif
python/: README.md  requirements.txt
python/src/: utils.py
src/: cat_events.py  cat_scheduler.py  cf_scheduler.py  cf_utils.py  main.py  pyg_utils.py  pygame_helper.py  utils.py
