[tool.poetry]
name = "catfacts"
version = "2.1"
description = "Displays slideshow of 60+ cat breeds with pictures and information."
authors = ["Mike Barberry <52507419+MikeBarberry@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
idna = "3.4"
pygame = "2.4.0"
urllib3 = "1.26.15"


[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"